--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -1,11 +1,9 @@
 @import 'normalize.css/normalize.css'
 
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i\|Source\+Sans\+Pro:400,400i,700,700i\|Playfair\+Display:700i)
+
 @require './_vars'
-
-
-
-
-
+@require './mixins/*'
 
 
 
