side menu completed

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -191,3 +191,24 @@ $dark-gray = $cod-grey
 $medium-gray = $light-grey
 $light-gray = $white-smoke
 $background-gray = $snow
+
+
+
+
+
+
+
+
+$side-menu-width-mobile = 100%
+$side-menu-width-desktop = rem(440px)
+$side-menu-background = $navy
+$side-menu-link-color = $white
+$side-menu-link-hover-color = $light-blue
+$side-menu-close-icon-color = $light-blue
+$side-menu-font-family = $sans-serif-headline
+$side-menu-main-font-size = rem(24px)
+$side-menu-main-font-weight = 700
+$side-menu-sub-font-size = rem(14px)
+$side-menu-sub-font-weight = 700
+$side-menu-sub-line-color = $dark-blue
+
