--- a/src/styles/modules/_side-menu.styl
+++ b/src/styles/modules/_side-menu.styl
@@ -142,15 +142,15 @@ body,
       // &:first-child a
       //   box-shadow: inset 0 -1px rgba(0, 0, 0, 0.2), inset 0 1px rgba(0, 0, 0, 0.2)
 
-#nav--main
-  li
-    font-size: $side-menu-main-font-size
-    font-weight: $side-menu-main-font-weight
-#nav--sub
-  li
-    font-size: $side-menu-sub-font-size
-    font-weight: $side-menu-sub-font-weight
-    &:first-child
-      box-shadow: 0px -2px $side-menu-sub-line-color
-      a
-        padding-top 2em
+  .nav--main
+    li
+      font-size: $side-menu-main-font-size
+      font-weight: $side-menu-main-font-weight
+  .nav--sub
+    li
+      font-size: $side-menu-sub-font-size
+      font-weight: $side-menu-sub-font-weight
+      &:first-child
+        box-shadow: 0px -2px $side-menu-sub-line-color
+        a
+          padding-top 2em
