--- a/templates/modules/nav/_nav-main.twig
+++ b/templates/modules/nav/_nav-main.twig
@@ -1,6 +1,6 @@
 {% set nav = menus.mainMenu %}
 
-<ul id="nav--main">
+<ul class="nav--main">
   {% nav item in nav %}
     {% if item.type == "customMenuItem" %}
       <li><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
