move global styles to html

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -194,7 +194,10 @@ $background-gray = $snow
 
 
 
+// ------------------------------------------------------
 
+$body-font-family = $sans-serif
+$body-background-color = $white
 
 
 
