--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -34,6 +34,7 @@
 @import './inc/_font-weight'
 @import './inc/_forms'
 @import './inc/_heights'
+@import './inc/_hidden'
 @import './inc/_letter-spacing'
 @import './inc/_line-height'
 @import './inc/_links'
@@ -62,6 +63,7 @@
 @import './inc/_z-index'
 @import './inc/_nested'
 
+@import './modules/_main-menu'
 @import './modules/_side-menu'
 
 @import './site/*'
