--- a/templates/modules/nav/_nav-main.twig
+++ b/templates/modules/nav/_nav-main.twig
@@ -1,12 +1,14 @@
 {% set nav = menus.mainMenu %}
 
 <ul class="nav--main">
+  {% include 'modules/header/_logo' %}
   {% nav item in nav %}
     {% if item.type == "customMenuItem" %}
-      <li><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
+      <li class="menu--item menu--item-text"><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
     {% elseif item.type == "entryMenuItem" %}
       {% set entry = item.entry.one() %}
-      <li><a href="#">{% if item.titleOverride %}{{item.titleOverride}}{% else %}{{entry.title}}{% endif %}</a></li>
+      <li class="menu--item"><a href="#">{% if item.titleOverride %}{{item.titleOverride}}{% else %}{{entry.title}}{% endif %}</a></li>
     {% endif %}
   {% endnav %}
+  {% include 'modules/header/_toggle-icon' %}
 </ul>
