consistant variable name

--- a/src/styles/modules/_side-menu.styl
+++ b/src/styles/modules/_side-menu.styl
@@ -16,7 +16,7 @@
   visibility: hidden
   width: $side-menu-width-mobile
   height: 100%
-  background: $side-menu-background
+  background: $side-menu-background-color
   transition: all 0.5s
   +above(mobile)
     width: $side-menu-width-desktop
