--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -218,7 +218,7 @@ $top-menu-link-hover-color = $light-blue
 
 $side-menu-width-mobile = 100%
 $side-menu-width-desktop = rem(440px)
-$side-menu-background = $navy
+$side-menu-background-color = $navy
 $side-menu-link-color = $white
 $side-menu-link-hover-color = $light-blue
 $side-menu-close-icon-color = $light-blue
