added stylus s-grid functions

--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -4,6 +4,9 @@
 
 @require './_vars'
 @require './mixins/*'
+@import 's-grid-settings'
+@import 's-grid-functions'
+// @import 's-grid-classes'
 
 
 // Import generated SVG sprites
