--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -204,7 +204,7 @@ $body-font-family = $sans-serif
 $body-background-color = $white
 
 
-
+// ------------------------------------------------------
 
 $top-menu-background-color = $white
 $top-menu-toggle-icon-color = $light-blue
@@ -214,7 +214,27 @@ $top-menu-main-font-weight = 700
 $top-menu-link-color = $navy
 $top-menu-link-hover-color = $light-blue
 
+// ------------------------------------------------------
 
+$footer-background-color = $white
+$footer-top-border-color = $light-blue
+$footer-top-border-height = rem(4px)
+$footer-text-color = $navy
+$footer-link-color = $footer-text-color
+$footer-link-hover-color = $light-blue
+$footer-link-font-family = $sans-serif-headline
+$footer-link-font-size = rem(14px)
+$footer-link-font-weight = 700
+
+$footer-copyright-background-color = $background-gray
+$footer-copyright-text-color = $footer-text-color
+$footer-copyright-link-color = $footer-link-color
+$footer-copyright-link-hover-color = $footer-link-hover-color
+$footer-copyright-font-family = $sans-serif
+$footer-copyright-font-size = rem(10px)
+$footer-copyright-font-weight = 400
+
+// ------------------------------------------------------
 
 $side-menu-width-mobile = 100%
 $side-menu-width-desktop = rem(440px)
