responsive copyright footer font size

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -232,6 +232,7 @@ $footer-copyright-link-color = $footer-link-color
 $footer-copyright-link-hover-color = $footer-link-hover-color
 $footer-copyright-font-family = $sans-serif
 $footer-copyright-font-size = rem(10px)
+$footer-copyright-font-size-desktop = rem(14px)
 $footer-copyright-font-weight = 400
 
 // ------------------------------------------------------
