--- a/src/styles/modules/_footer.styl
+++ b/src/styles/modules/_footer.styl
@@ -125,6 +125,7 @@ footer
   text-align: center
   +above(tablet-min)
     grid()
+    font-size: $footer-copyright-font-size-desktop
   +between(m, l)
     padding: rem(32px) rem(30px) rem(27px)
   +above(l)
