fix entries nav link url

--- a/templates/modules/footer/_nav.twig
+++ b/templates/modules/footer/_nav.twig
@@ -6,7 +6,7 @@
         <li class="footer--nav--item footer--nav--item-text"><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
       {% elseif item.type == "entryMenuItem" %}
         {% set entry = item.entry.one() %}
-        <li class="footer--nav--item"><a href="#">{% if item.titleOverride %}{{item.titleOverride}}{% else %}{{entry.title}}{% endif %}</a></li>
+        <li class="footer--nav--item footer--nav--item-text"><a href="{{entry.url}}">{% if item.titleOverride %}{{item.titleOverride}}{% else %}{{entry.title}}{% endif %}</a></li>
       {% endif %}
     {% endnav %}
   </ul>
