--- a/templates/modules/nav/_nav-sub.twig
+++ b/templates/modules/nav/_nav-sub.twig
@@ -6,7 +6,7 @@
       <li><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
     {% elseif item.type == "entryMenuItem" %}
       {% set entry = item.entry.one() %}
-      <li><a href="#">{% if item.titleOverride %}{{item.titleOverride}}{% else %}{{entry.title}}{% endif %}</a></li>
+      <li><a href="{{entry.url}}">{% if item.titleOverride %}{{item.titleOverride}}{% else %}{{entry.title}}{% endif %}</a></li>
     {% endif %}
   {% endnav %}
 </ul>
