--- a/templates/structure/minutes-agendas/index.twig
+++ b/templates/structure/minutes-agendas/index.twig
@@ -1,1 +1,14 @@
-Minutes &amp; Agendas Landing
+{#
+    Minutes & Agendas Landing Template
+#}
+
+{% extends "layouts/base/_base" %}
+
+{% set title = entry.title %}
+
+{# HTML #}
+{% block content %}
+
+<h1>{{ entry.title }}</h1>
+
+{% endblock %}
