--- a/templates/modules/footer/_copyright-nav.twig
+++ b/templates/modules/footer/_copyright-nav.twig
@@ -6,7 +6,7 @@
         <li class="footer--copyright-nav--item footer--copyright-nav--item-text"><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
       {% elseif item.type == "entryMenuItem" %}
         {% set entry = item.entry.one() %}
-        <li class="footer--copyright-nav--item"><a href="{{entry.url}}">{% if item.titleOverride %}{{item.titleOverride}}{% else %}{{entry.title}}{% endif %}</a></li>
+        <li class="footer--copyright-nav--item"><a href="{{entry.url}}" title="{{ entry.Title }}">{{ entry.Title }}</a></li>
       {% endif %}
     {% endnav %}
   </ul>
