--- a/templates/layouts/base/_base.twig
+++ b/templates/layouts/base/_base.twig
@@ -5,6 +5,12 @@
 <title>{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}</title>
 
 <link type="text/plain" rel="author" href="/humans.txt" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#033762">
+<meta name="theme-color" content="#ffffff">
 
 {# Base #}
 {% do view.registerCssFile("/assets/css/master.css") %}
