switching out s-grid for lost

--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -4,9 +4,8 @@
 
 @require './_vars'
 @require './mixins/*'
-@import 's-grid-settings'
-@import 's-grid-functions'
-// @import 's-grid-classes'
+
+@lost flexbox flex
 
 
 // Import generated SVG sprites
