--- a/src/styles/modules/_main-menu.styl
+++ b/src/styles/modules/_main-menu.styl
@@ -99,6 +99,7 @@
     padding: 0 1em
     text-decoration: none
     text-transform: uppercase
+    transition: color .15s ease-in
     +above(desktop-min)
       padding: 0 1.92857em
     &:hover
