--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -205,6 +205,7 @@ $body-background-color = $white
 
 
 // ------------------------------------------------------
+// ------ TOP MENU
 
 $top-menu-background-color = $white
 $top-menu-toggle-icon-color = $light-blue
@@ -215,6 +216,7 @@ $top-menu-link-color = $navy
 $top-menu-link-hover-color = $light-blue
 
 // ------------------------------------------------------
+// ------ FOOTER
 
 $footer-background-color = $white
 $footer-top-border-color = $light-blue
@@ -236,6 +238,7 @@ $footer-copyright-font-size-desktop = rem(14px)
 $footer-copyright-font-weight = 400
 
 // ------------------------------------------------------
+// ------ SIDE MENU
 
 $side-menu-width-mobile = 100%
 $side-menu-width-desktop = rem(440px)
@@ -249,4 +252,45 @@ $side-menu-main-font-weight = 700
 $side-menu-sub-font-size = rem(14px)
 $side-menu-sub-font-weight = 700
 $side-menu-sub-line-color = $dark-blue
+
+// ------------------------------------------------------
+// ------ CONTENT AREA
+
+$content-text-color = $navy
+$content-text-size = rem(18px)
+$content-text-line-height = 1.3em
+
+$content-link-color = $light-blue
+$content-link-decoration = none
+$content-link-weight = 700
+$content-link-hover-color = $medium-blue
+$content-link-hover-decoration = underline
+
+$content-blockquote-quote-color = $light-blue
+$content-blockquote-quote-line-height = 1.3em
+$content-blockquote-quote-size = rem(24px)
+
+$content-blockquote-margin = 1em 0 1em rem(30px)
+$content-blockquote-cite-margin-top = 1em
+
+$content-blockquote-cite-color = $navy
+$content-blockquote-cite-size = rem(18px)
+$content-blockquote-cite-weight = 700
+$content-blockquote-cite-style = normal
+$content-blockquote-cite2-color = $navy
+$content-blockquote-cite2-style = italic
+$content-blockquote-cite2-weight = 700
+
+// ------------------------------------------------------
+// ------ QUICK LINKS
+
+$module-quick-links-box-shadow = 0 0 rem(15px) rgba($black,.1)
+$module-quick-links-background-color = $white
+$module-quick-links-link-color = $light-blue
+$module-quick-links-link-size = rem(16px)
+$module-quick-links-link-decoration = none
+$module-quick-links-link-weight = 700
+$module-quick-links-arrow-color = $medium-blue
+
+
 
