--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -68,5 +68,6 @@
 @import './modules/_main-menu'
 @import './modules/_side-menu'
 @import './modules/_footer'
+@import './modules/_aside-quick-links'
 
 @import './site/*'
