--- a/src/styles/modules/_side-menu.styl
+++ b/src/styles/modules/_side-menu.styl
@@ -92,13 +92,9 @@
         text-shadow: 0 0 1px rgba(255, 255, 255, 0.1)
         letter-spacing: 1px
         text-decoration: none
-        transition: background 0.3s, box-shadow 0.3s
+        transition: color .15s ease-in
         &:hover
-          // background: rgba(0, 0, 0, 0.2)
-          // box-shadow: inset 0 -1px rgba(0, 0, 0, 0)
           color: $side-menu-link-hover-color
-      // &:first-child a
-      //   box-shadow: inset 0 -1px rgba(0, 0, 0, 0.2), inset 0 1px rgba(0, 0, 0, 0.2)
 
   .nav--main
     li
