--- a/templates/structure/news-events/_types/_article.twig
+++ b/templates/structure/news-events/_types/_article.twig
@@ -1,2 +1,6 @@
-<h1>{{ entry.title }}</h1>
-<h2>News Article</h2>
+<header>
+  <h1>{{ entry.title }}</h1>
+  <h2>News Article</h2>
+</header>
+
+{% include "modules/content/_page-content" %}
