added subtle hover animation to quick links

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -291,6 +291,7 @@ $module-quick-links-link-size = rem(16px)
 $module-quick-links-link-decoration = none
 $module-quick-links-link-weight = 700
 $module-quick-links-arrow-color = $medium-blue
+$module-quick-links-link-hover-color = $medium-blue
 
 
 
