working on page content styling

--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -11,7 +11,8 @@
 // Import generated SVG sprites
 @import '../../generated/sprites/css/sprite'
 
-
+// Plugins
+@import '@fancyapps/fancybox/dist/jquery.fancybox.css'
 
 @import './inc/_box-sizing'
 @import './inc/_aspect-ratios'
