--- a/templates/layouts/base/_base.twig
+++ b/templates/layouts/base/_base.twig
@@ -14,6 +14,8 @@
 
 {# Base #}
 {% do view.registerCssFile("/assets/css/master.css") %}
+
+<script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
 {% do view.registerJsFile("/assets/js/scripts.js") %}
 
 {{ head() }}
