--- a/templates/modules/content/_page-content.twig
+++ b/templates/modules/content/_page-content.twig
@@ -1,17 +1,68 @@
 {% for block in entry.pageContent %}
-<section class="page-content page-content--block">
+<section class="page-content page-content--block block--{{ block.type }}">
+
   {% if block.type == "richText" %}
+    {# RICH TEXT #}
 
     {{ block.text }}
 
   {% elseif block.type == "image" %}
+    {# IMAGES #}
 
-    {% set image = block.image.first() %}
-    {% if image %}
-      <img src="{{ image.getUrl('thumb') }}" width="{{ image.getWidth('thumb') }}" height="{{ image.getHeight('thumb') }}" alt="{{ image.title }}">
-  {% endif %}
+    <div class="image-grid">
+
+    {% set images = block.image %}
+    {% if images | length == "1" %}
+      {# SINGLE IMAGE #}
+
+      {% set image = images.one() %}
+      {% if craft.app.request.isLivePreview and image.width < 1600 %}
+        <p>Please assign an image that is at least 1600px wide.</p>
+      {% endif %}
+      {% include "modules/images/_grid-image" %}
+
+    {% elseif images | length > "1" %}
+      {# ROW OF IMAGES #}
+
+      {% for image in images %}
+        {% if craft.app.request.isLivePreview and image.width < 1600 %}
+          <p>Please assign an image that is at least 1600px wide.</p>
+        {% endif %}
+        {% include "modules/images/_grid-image" %}
+      {% endfor %}
+
+    {% endif %}
+    </div>
+
+  {% elseif block.type == "embed" %}
+    {# EMBEDDED CONTENT #}
+
+    {% if block.embedUrl.embedData.type == "video" %}
+      {# VIDEO #}
+
+      <div class="embed-container type-video {{block.embedUrl.embedData.providerName|lower|kebab}}">
+        {% set videoId = (block.embedUrl.embedData.url|replace('https://www.youtube.com/watch?v=', '') | raw) %}
+        <iframe class="lazyload" width="1280" height="720" src="//youtube.com/embed/{{videoId}}?VQ=HD720" frameborder="0" allowfullscreen></iframe>
+      </div>
+
+    {% elseif block.embedUrl.embedData.type == "rich" %}
+      {# FACEBOOK/TWITTER #}
+
+      <div class="embed-container type-{{block.embedUrl.embedData.type}} {{block.embedUrl.embedData.providerName|lower|kebab}}">
+        {{ block.embedUrl.embedData.code|replace('<iframe ', '<iframe class="lazyload" ') | raw }}
+      </div>
+    {% else %}
+      {# CATCH-ALL FOR REMAINING #}
+
+      <div class="embed-container type-{{block.embedUrl.embedData.type}} {{block.embedUrl.embedData.providerName|lower|kebab}}">
+        {{ block.embedUrl.embedData.code|replace('<iframe ', '<iframe class="lazyload" ') | raw }}
+      </div>
+
+    {% endif %}
 
   {% elseif block.type == "quote" %}
+    {# QUOTES #}
+
     <blockquote>
       <p>{{ block.quote }}</p>
       <footer>
