continued article styling, added headers and parallax

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -282,6 +282,37 @@ $content-blockquote-cite2-style = italic
 $content-blockquote-cite2-weight = 700
 
 // ------------------------------------------------------
+// ------ HEADERS
+
+$header-text-color = $navy
+$header-text-font = $sans-serif
+$header-text-size = rem(40)
+$header-text-style = normal
+$header-text-weight = 700
+$header-text-line-height = 1.3em
+
+// ------------------------------------------------------
+// ------ PAGE LEAD IN
+
+$module-lead-in-font = $serif
+$module-lead-in-color = $light-blue
+$module-lead-in-size = rem(21px)
+$module-lead-in-line-height = 1.3em
+$module-lead-in-style = italic
+$module-lead-in-weight = 700
+
+// ------------------------------------------------------
+// ------ PAGE META
+
+$module-meta-font = $sans-serif
+$module-meta-color = $light-blue
+$module-meta-size = rem(14px)
+$module-meta-line-height = 1.3em
+$module-meta-style = normal
+$module-meta-transform = uppercase
+$module-meta-weight = 700
+
+// ------------------------------------------------------
 // ------ QUICK LINKS
 
 $module-quick-links-box-shadow = 0 0 rem(15px) rgba($black,.1)
