--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -70,5 +70,10 @@
 @import './modules/_side-menu'
 @import './modules/_footer'
 @import './modules/_aside-quick-links'
+@import './modules/_breadcrumb'
+@import './modules/_header-image-block'
+@import './modules/_header-text-only'
+@import './modules/_meta'
+@import './modules/_lead-in'
 
 @import './site/*'
