--- a/templates/structure/news-events/_types/_article.twig
+++ b/templates/structure/news-events/_types/_article.twig
@@ -1,6 +1,8 @@
 <header>
+  <p class="meta">News Article</p>
   <h1>{{ entry.title }}</h1>
-  <h2>News Article</h2>
+  <p class="meta">News Article</p>
+  <p class="lead">{{ entry.leadIn }}</p>
 </header>
 
 {% include "modules/content/_page-content" %}
