--- a/src/styles/modules/_footer.styl
+++ b/src/styles/modules/_footer.styl
@@ -2,6 +2,7 @@
   background-color: $footer-background-color
   border-top: $footer-top-border-height solid $footer-top-border-color
 
+footer
   ul
     margin: 0
     padding: 0
