--- a/templates/modules/images/_grid-image.twig
+++ b/templates/modules/images/_grid-image.twig
@@ -1,14 +1,14 @@
 {%- import "macros/_images" as imageFunctions -%}
 {% set outputWidths = [480, 640, 1024, 1600] %}
-{%- set qual = 20 -%}
+{%- set initialQuality = 20 -%}
 {%- if image.aspectRatio | length -%}
   {% set aspect = image.aspectRatio|split('x') %}
   {% set aspectRatio = (aspect[0]/aspect[1]) %}
-  {%- set small = { width: 40, height: 40 / aspectRatio, quality: qual } -%}
-  {%- set medium = { width: 100, height: 100 / aspectRatio, quality: qual } -%}
+  {%- set small = { width: 40, height: 40 / aspectRatio, quality: initialQuality } -%}
+  {%- set medium = { width: 100, height: 100 / aspectRatio, quality: initialQuality } -%}
 {%- else -%}
-  {%- set small = { width: 40, quality: qual } -%}
-  {# {%- set medium = { width: 640, quality: qual } -%} #}
+  {%- set small = { width: 40, quality: initialQuality } -%}
+  {%- set medium = { width: 100, quality: initialQuality } -%}
 {%- endif -%}
 
 <figure class="
