add box shadow to header

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -214,6 +214,7 @@ $top-menu-main-font-size = rem(14px)
 $top-menu-main-font-weight = 700
 $top-menu-link-color = $navy
 $top-menu-link-hover-color = $light-blue
+$top-menu-bottom-shadow = 0 2px 10px rgba($black, 0.1)
 
 // ------------------------------------------------------
 // ------ FOOTER
