--- a/src/styles/modules/_main-menu.styl
+++ b/src/styles/modules/_main-menu.styl
@@ -10,6 +10,7 @@
   min-width: rem(320px)
   height: rem(80px)
   max-height: rem(80px)
+  box-shadow $top-menu-bottom-shadow
   +above(desktop-min)
     height: rem(94px)
     max-height: rem(94px)
