quick links variables, update meta font

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -305,7 +305,7 @@ $module-lead-in-weight = 700
 // ------------------------------------------------------
 // ------ PAGE META
 
-$module-meta-font = $sans-serif
+$module-meta-font = $sans-serif-headline
 $module-meta-color = $light-blue
 $module-meta-size = rem(14px)
 $module-meta-line-height = 1.3em
@@ -318,6 +318,9 @@ $module-meta-weight = 700
 
 $module-quick-links-box-shadow = 0 0 rem(15px) rgba($black,.1)
 $module-quick-links-background-color = $white
+$module-quick-links-title-font = $sans-serif-headline
+$module-quick-links-title-size = rem(24px)
+$module-quick-links-title-transform = uppercase
 $module-quick-links-link-color = $light-blue
 $module-quick-links-link-size = rem(16px)
 $module-quick-links-link-decoration = none
