--- a/src/styles/modules/_aside-quick-links.styl
+++ b/src/styles/modules/_aside-quick-links.styl
@@ -6,10 +6,11 @@
   +above(xl)
     padding rem(60px) rem(30px)
   > h3
-    font-size rem(24px)
+    font-family $module-quick-links-title-font
+    font-size $module-quick-links-title-size
     margin 0 0 rem(30px)
     text-align center
-    text-transform uppercase
+    text-transform $module-quick-links-title-transform
     &:before
       background-color: $module-quick-links-link-color
       background-repeat: no-repeat
