--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -9,6 +9,8 @@ $imageRatio = ((1/3) * 100)%
 
     figure
       margin 0
+      img
+        @extend $lazy-load
 
 +above(m)
   #page--inner--columns.two.news-events.parallax
