--- a/src/styles/modules/_footer.styl
+++ b/src/styles/modules/_footer.styl
@@ -1,6 +1,8 @@
-#page--inner > footer
+#page--inner footer
   background-color: $footer-background-color
   border-top: $footer-top-border-height solid $footer-top-border-color
+  display block
+  width 100%
 
 footer
   ul
