--- a/templates/layouts/base/_base.twig
+++ b/templates/layouts/base/_base.twig
@@ -1,48 +1,16 @@
-{% header "x-author: Mike Stecker (@mikestecker)" %}
-<!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+{#
+    Base Layout
+#}
 
-<title>{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}</title>
+{% extends "layouts/base/_core" %}
 
-<link type="text/plain" rel="author" href="/humans.txt" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#033762">
-<meta name="theme-color" content="#ffffff">
+{% block core %}
 
-{# Base #}
-{% do view.registerCssFile("/assets/css/master.css") %}
+  {% block content %}{% endblock %}
 
-<script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
-{% do view.registerJsFile("/assets/js/scripts.js") %}
-
-{{ head() }}
-
-<div id="container">
   {# {% cache for 4 weeks %} #}
-    {% include 'modules/side-menu/_side-menu' %}
+    {% include 'modules/footer/_footer' %}
   {# {% endcache %} #}
 
-  {# content push wrapper #}
-  <div id="wrapper">
 
-    <div id="page">{# this is the wrapper for the content #}
-      <div id="page--inner">{# extra div for emulating position:fixed of the menu #}
-        {# {% cache for 4 weeks %} #}
-          {% include 'modules/header/_header' %}
-        {# {% endcache %} #}
-
-        {% block content %}{% endblock %}
-
-        {# {% cache for 4 weeks %} #}
-          {% include 'modules/footer/_footer' %}
-        {# {% endcache %} #}
-      </div><!-- /#page--inner -->
-    </div><!-- /#page -->
-
-  </div><!-- /#wrapper -->
-</div><!-- /#container -->
-
-{{ endBody() }}
+{% endblock %}
