header block tweaks

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -292,6 +292,12 @@ $header-text-style = normal
 $header-text-weight = 700
 $header-text-line-height = 1.3em
 
+$header-block-title-color = $white
+$header-block-title-font = $sans-serif-headline
+$header-block-title-size = rem(60)
+$header-block-title-weight = 700
+$header-block-title-transform = uppercase
+
 // ------------------------------------------------------
 // ------ PAGE LEAD IN
 
