--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -1,13 +1,31 @@
 $imageRatio = ((1/3) * 100)%
 
 #header-image
-  &.news-events-article
-    +above(m)
+  position: relative
+
+  > h1
+    position: absolute
+    left: 50%
+    top: 50%
+    transform: translate(-50%, -50%)
+    margin 0
+    z-index 5
+
+    color: $header-block-title-color
+    font-family: $header-block-title-font
+    font-size: $header-block-title-size
+    font-weight: $header-block-title-weight
+    text-transform: $header-block-title-transform
+
+  figure
+    margin 0
+    z-index 0
+    img
+      @extend $lazy-load
+
++above(m)
+  .page-section--news-events
+    #header-image
       margin: rem(40px) 0 0
       lost-column 32/36
       lost-offset: 2/36
-
-    figure
-      margin 0
-      img
-        @extend $lazy-load
