--- a/templates/layouts/columns/_two.twig
+++ b/templates/layouts/columns/_two.twig
@@ -4,10 +4,13 @@
 
 {% extends "layouts/base/_base" %}
 
+{% block headerBlock %}{% endblock %}
+
 {% block content %}
 <div id="page--inner--columns" class="two">
   {# MAIN #}
   <main id="content">
+  <h1>TWO</h1>
     {% block main %}{% endblock %}
   </main>
 
