--- a/templates/structure/news-events/_entry.twig
+++ b/templates/structure/news-events/_entry.twig
@@ -8,7 +8,7 @@
 
 
 {# HEADER IMAGE #}
-{% block headerImage %}
+{% block headerBlock %}
 
   {% if entry.type == 'article' %}
     {% include "structure/news-events/_header-image" %}
