--- a/templates/modules/content/_quick-links.twig
+++ b/templates/modules/content/_quick-links.twig
@@ -1,9 +1,9 @@
+{%- set nav = entry.quickLinks -%}
 <ul>
-  {% set nav = entry.quickLinks %}
   {% nav item in nav %}
-    {% if item.type == "customMenuItem" %}
-      <li class="quick-links--item"><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
-    {% elseif item.type == "entryMenuItem" %}
+    {% if item.type == "external" %}
+      <li class="quick-links--item"><a href="{{item.linkUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.linkTitle}}</a></li>
+    {% elseif item.type == "internal" %}
       {% set entry = item.entry.one() %}
       <li class="quick-links--item"><a href="{{entry.url}}" title="{{ entry.Title }}">{{ entry.Title }}</a></li>
     {% endif %}
