--- a/templates/layouts/columns/_one.twig
+++ b/templates/layouts/columns/_one.twig
@@ -5,8 +5,10 @@
 {% extends "layouts/base/_base" %}
 
 {% block content %}
-  {# MAIN #}
-  <main id="content">
-  {% block main %}{% endblock %}
-  </main>
+  <div id="page--inner--columns" class="one">
+    {# MAIN #}
+    <main id="content">
+    {% block main %}{% endblock %}
+    </main>
+  </div>
 {% endblock %}
