landing mostly done

--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -65,11 +65,13 @@
 @import './inc/_hovers'
 @import './inc/_z-index'
 @import './inc/_nested'
+@import './inc/_buttons'
 
 @import './modules/_main-menu'
 @import './modules/_side-menu'
 @import './modules/_footer'
-@import './modules/_aside-quick-links'
+@import './modules/_block-quick-links'
+@import './modules/_block-subpage'
 @import './modules/_breadcrumb'
 @import './modules/_header-image-block'
 @import './modules/_header-text-only'
