--- a/templates/modules/content/_block-quick-links.twig
+++ b/templates/modules/content/_block-quick-links.twig
@@ -1,5 +1,5 @@
 {% if entry.quickLinks.count() %}
-<div id="aside--quick-links">
+<div id="block--quick-links">
   <h3>Quick Links</h3>
   {% include "modules/content/_quick-links" %}
 </div>
