--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -320,6 +320,20 @@ $module-meta-transform = uppercase
 $module-meta-weight = 700
 
 // ------------------------------------------------------
+// ------ SUB-PAGE BLOCKS (FOR LANDING PAGES)
+
+$module-subpages-box-shadow = 0 0 rem(15px) rgba($black,.1)
+$module-subpages-background-color = $white
+$module-subpages-link-font = $sans-serif-headline
+$module-subpages-link-transform = uppercase
+$module-subpages-link-color = $light-blue
+$module-subpages-link-size = rem(18px)
+$module-subpages-link-decoration = none
+$module-subpages-link-weight = 700
+$module-subpages-arrow-color = $medium-blue
+$module-subpages-link-hover-color = $medium-blue
+
+// ------------------------------------------------------
 // ------ QUICK LINKS
 
 $module-quick-links-box-shadow = 0 0 rem(15px) rgba($black,.1)
@@ -334,5 +348,17 @@ $module-quick-links-link-weight = 700
 $module-quick-links-arrow-color = $medium-blue
 $module-quick-links-link-hover-color = $medium-blue
 
+// ------------------------------------------------------
+// ------ BUTTONS
 
-
+$button-background = $light-blue
+$button-box-shadow = 0 0 rem(7.5px) rgba($black,.2)
+$button-text-color = $white
+$button-font = $sans-serif-headline
+$button-font-size = rem(14px)
+$button-font-weight = 700
+$button-line-height = 1
+$button-transform = uppercase
+$button-padding = rem(28.5px)
+$button-hover-background = $medium-blue
+$button-hover-box-shadow = 0 0 rem(15px) rgba($black,.1)
