--- a/src/styles/site/_layout-columns.styl
+++ b/src/styles/site/_layout-columns.styl
@@ -1,4 +1,5 @@
 #page--inner--columns
+  width 100%
   +above(m)
     lost-flex-container: row
   // +above(xl)
@@ -9,6 +10,10 @@
     & > main
       // placeholder:
       background-color $white
+      width 100%
+
+      +above(m)
+        lost-flex-container: row
 
 
 
