--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -1,3 +1,6 @@
+$landingImageRatio = ((5/12) * 100)%
+$newsImageRatio = ((1/3) * 100)%
+
 +above(m)
   .parallax
     perspective: 1px
@@ -19,19 +22,23 @@
       padding: rem(40px) 0
       transform-style: preserve-3d
       transform: translate3d(0)
-      top: $imageRatio
+      top: $landingImageRatio
       lost-flex-container: row
 
-      main
-        margin: 0 0 rem(40px) 0
+      // main
+      //   margin: 0 0 rem(40px) 0
 
       aside
           margin-top -(rem(120px))
 
-+above(m)
+
+  .page-type--landing
+    .parallax .parallax__layer--base
+      top: $landingImageRatio
+
   .page-section--news-events
     .parallax .parallax__layer--base
-      top: 'calc(%s - %s)' % ($imageRatio 1rem)
+      top: 'calc(%s - %s)' % ($newsImageRatio 1rem)
 
       aside
           margin-top -(rem(80px))
