--- a/templates/structure/boards/_entry.twig
+++ b/templates/structure/boards/_entry.twig
@@ -2,12 +2,12 @@
     Boards Channel Entry Template
 #}
 
-{% extends "layouts/base/_base" %}
+{% extends "layouts/columns/_one" %}
 
 {% set title = entry.title %}
 
 {# HTML #}
-{% block content %}
+{% block main %}
 
 <h1>{{ entry.title }}</h1>
 
